--- a/public/Register/style.css
+++ b/public/Register/style.css
@@ -5,7 +5,7 @@ body {
     background-color: #f0f0f0;
   }
 
-  #login-section {
+#register-section {
     max-width: 500px;
     margin: 50px auto;
     padding: 20px;
@@ -13,19 +13,28 @@ body {
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
   }
-
-  #login-section h1 {
+  
+  #register-section h1 {
     margin-bottom: 20px;
     text-align: center;
     color: #007bff;
   }
-
+  
+  #register-section p {
+    color: red;
+    margin-bottom: 20px;
+  }
+  
+  #register-form {
+    text-align: left;
+  }
+  
   label {
     display: block;
     margin-bottom: 5px;
-    text-align: left;
   }
-
+  
+  input[type="text"],
   input[type="email"],
   input[type="password"] {
     width: calc(100% - 20px);
@@ -35,55 +44,36 @@ body {
     border-radius: 4px;
     box-sizing: border-box;
   }
-
+  
   button[type="submit"] {
     width: calc(100% - 20px);
     padding: 10px;
-    background-color: #297be5;
-    color: #ffffff;
-    margin-bottom: 10px;
+    background-color: #007bff;
+    color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
-
-  button[type="submit"]:hover{
-    background-color: #5399f4;
+  
+  button[type="submit"]:hover {
+    background-color: #0056b3;
   }
-
-  #forget-btn {
-    background: none;
-    border: none;
-    color: #007bff;
-    cursor: pointer;
-    font-size: 15px;
-    margin-left: -5px;
-    /* text-decoration: underline; */
+  
+  .Login-link {
+    margin-top: 20px;
   }
-
-  #forget-btn:hover {
-    color: #0056b3;
-  }
-
-  .register-link {
-    margin-top: 10px;
-  }
-
-  .register-link span {
+  
+  .Login-link span {
     display: inline-block;
+    color: #333;
+  }
+  
+  .Login-link a {
+    color: #007bff;
     text-decoration: none;
   }
-  .register-link span a{
-    text-decoration: none;
+  
+  .Login-link a:hover {
+    text-decoration: underline;
   }
-
-  @media only screen and (max-width: 600px) {
-    #login-section {
-      padding: 10px;
-    }
-    input[type="email"],
-    input[type="password"],
-    button[type="submit"] {
-      width: calc(100% - 10px);
-    }
-  }
+  
